--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-helmet": "^6.1.0",
     "react-reveal": "^1.2.2",
     "sass": "^1.32.7"
   }
